--- a/Lab2_Aiml.ipynb
+++ b/Lab2_Aiml.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOxT/4+xUb7xsrZmEILuql3",
+      "authorship_tag": "ABX9TyNr7KYyX87y7jd1MRB1F3yw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "M8DSaixJZmWY",
         "colab": {
@@ -123,34 +123,43 @@
     {
       "cell_type": "code",
       "source": [
-        "garph1 = {\n",
-        "    'A' : ['C','D','G'],\n",
-        "    'C' : ['A','D','F']\n",
-        "    'D' : ['A','C','E','G','H']\n",
-        "    'E' : ['D','F','H']\n",
-        "    'F' : ['C','E']\n",
-        "    'G' : ['A','D','H']\n",
-        "    'H' : ['D','E','G']\n",
+        "graph1 = {\n",
+        "    'A' : ['C', 'D', 'G'],\n",
+        "    'C' : ['A', 'D', 'F'],\n",
+        "    'D' : ['A', 'C', 'E', 'G', 'H'],\n",
+        "    'E' : ['D', 'F', 'H'],\n",
+        "    'F' : ['C', 'E'],\n",
+        "    'G' : ['A', 'D', 'H'],\n",
+        "    'H' : ['D', 'E', 'G'],\n",
         "}\n",
-        "print(\"The adjacency list resprestating the graph is:\")\n",
-        "print(garph1)"
+        "print(\"The adjacency List representating the graph is: \")\n",
+        "print(graph1)\n",
+        "\n",
+        "def dfs(graph,node,visited):\n",
+        "  if node not in visited:\n",
+        "    visited.append(node)\n",
+        "    for k in graph[node]:\n",
+        "      dfs(graph,k,visited)\n",
+        "  return visited\n",
+        "visited=dfs(graph1,'A',[])\n",
+        "print(visited)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
+          "base_uri": "https://localhost:8080/"
         },
         "id": "yxGn4JWik5L8",
-        "outputId": "1683db0f-80d1-411f-a317-42bf986be78e"
+        "outputId": "f89afa4b-986f-4b8c-cf58-ca230edc00c9"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax. Perhaps you forgot a comma? (<ipython-input-9-4c111da8c201>, line 3)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-4c111da8c201>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    'C' : ['A','D','F']\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The adjacency List representating the graph is: \n",
+            "{'A': ['C', 'D', 'G'], 'C': ['A', 'D', 'F'], 'D': ['A', 'C', 'E', 'G', 'H'], 'E': ['D', 'F', 'H'], 'F': ['C', 'E'], 'G': ['A', 'D', 'H'], 'H': ['D', 'E', 'G']}\n",
+            "['A', 'C', 'D', 'E', 'F', 'H', 'G']\n"
           ]
         }
       ]
